# pre-commit-action

./: .dictionary.txt  .pre-commit-config.yaml  CHANGELOG.md  README.md  action.yaml  cspell.config.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: notify-assignee.yaml  notify-reviewers.yaml  test.yaml
