[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version = "0.9.36"
  version_files = [
    "pyproject.toml:version",
    "README.md:pre-commit-action@"
  ]
  major_version_zero = true

  [tool.poetry]
  name = "pre-commit-action"
  version = "0.9.36"
  description = "Optimized GitHub Action for Running pre-commit Hooks"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.11.1"

  [tool.poetry.dev-dependencies]
  commitizen = "==2.39.1" # Keep in sync with .pre-commit-config.yaml and action.yaml.
  pre-commit = "==2.21.0"
