[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version = "0.9.40"
  version_files = [
    "pyproject.toml:version",
    "README.md:pre-commit-action@"
  ]
  major_version_zero = true

  [tool.poetry]
  name = "pre-commit-action"
  version = "0.9.40"
  description = "Optimized GitHub Action for Running pre-commit Hooks"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.11.2"

  [tool.poetry.dev-dependencies]
  commitizen = "==2.40.0" # Keep in sync with .pre-commit-config.yaml and action.yaml.
  pre-commit = "==3.0.4"
