[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = ["README.md:pre-commit-action@"]
  major_version_zero = true

  [tool.poetry]
  name = "pre-commit-action"
  version = "0.9.114"
  description = "Optimized GitHub Action for Running pre-commit Hooks"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.0"

  [tool.poetry.group.dev.dependencies]
  commitizen = "==3.10.1" # Keep in sync with .pre-commit-config.yaml and action.yaml.
  pre-commit = "==3.5.0"
